# flok

./: AGENTS.md  CONTRIBUTION.md  Cargo.toml  README.md  SETUP.md
docs/features/: basic-feature.md  process-watch.md
src/: config.rs  error.rs  main.rs  state.rs  ui.rs  watcher.rs
src/ui/: mod.rs
src/ui/components/: mod.rs  pty.rs  texts.rs
src/ui/components/lists/: mod.rs  sidelistview.rs  splitlistview.rs
src/utils/: file_watcher.rs  mod.rs  process.rs
tests/assets/: docker-compose.yaml  flok.json  flok.yaml
