[package]
name = "flok"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.36", features = ["derive"] }
crossterm = "0.28.1"
ratatui = "0.29.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tempfile = "3.19.1"
thiserror = "2.0.12"
tui-widget-list = "0.13.2"
