[package]
name = "flok"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
bus = "2.4"
clap = { version = "4.5.36", features = ["derive"] }
crossterm = "0.28.1"
nix = { version = "0.29", features = ["signal", "process"] }
notify = "8"
portable-pty = "0.8.1"
ratatui = "0.29.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_valid = "0.25"
serde_yaml = "0.9"
tempfile = "3.19.1"
thiserror = "2.0.12"
vt100 = "0.15.2"
